[tool.poetry]
name = "sushi"
version = "0.1.0"
description = ""
authors = ["lamt3 <lamtomoki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.37"
fastapi = "^0.115.8"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
